# timer_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: timer.hpp
src/: timer.cpp
